# nsh

./: .gitignore  AIchatlink  CMakeFiles.txt  CMakeLists.txt  executer.cpp  main.cpp  malak.txt  nsh.cpp  output.txt  results  results.txt  shell.h  test.txt  test_cases.txt  text.txt
include/: builtins.hpp  executer.hpp  fileHandling.hpp  history.hpp  parser.hpp  shellMessage.hpp
myprog/: CMakeCache.txt
program/: CMakeCache.txt  CMakeLists.txt  Makefile  MyProgram  cmake_install.cmake  executer.cpp
src/: .builtins.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  builtins.cpp  builtins.cpp.save  cmake_install.cmake  executer.cpp  fileHandling.cpp  history.cpp  main.cpp  malak.txt  moh.txt  nsh  output.txt  outputt.txt  parser.cpp  shellMessage.cpp
